# registry-trust-connector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: ci.yml
docs/: README.md  architecture-overview.md  ci-security-gates.md  configuration-reference.md  demo-test-environment.md  get-started.md  run-the-connector.md  security-model.md  standards-conformance.md  troubleshooting.md
examples/: .env.example  client.openspp.yaml  demo.sh  docker-compose.yml  generate-dev-pki.sh  server.relay.yaml
examples/relay/: mock-relay.py
src/: config.rs  errors.rs  identity.rs  lib.rs  logging.rs  main.rs  proxy.rs  redaction.rs  routing.rs  tls.rs
tests/: audit_logging.rs  cli_validation.rs  config_validation.rs  mtls_integration.rs  proxy_policy.rs  routing_validation.rs
