[package]
name = "registry-trust-connector"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
description = "Registry Trust Connector: small mTLS policy proxy for Registry Relay and Notary."
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.8" }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
percent-encoding = "2"
registry-platform-httpsec = { version = "0.3.0", path = "../registry-platform/crates/registry-platform-httpsec" }
registry-platform-audit = { version = "0.3.0", path = "../registry-platform/crates/registry-platform-audit" }
registry-platform-httputil = { version = "0.3.0", path = "../registry-platform/crates/registry-platform-httputil" }
registry-platform-pdp = { version = "0.3.0", path = "../registry-platform/crates/registry-platform-pdp" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.26"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros", "net", "fs", "time", "sync"] }
tokio-rustls = "0.26"
tower = { version = "0.5", features = ["limit", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
ulid = "1"
url = { version = "2", features = ["serde"] }
x509-parser = { version = "0.17", features = ["verify"] }
zeroize = "1"

[dev-dependencies]
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
tempfile = "3"
